compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_for_normal_boolean_bounds.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "for : false .. true end for"

---
"<root>"@(dummy) [Declared]: <error>

