compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_for_wrong_types_bounds_concrete_integer.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 41
expression: "var r : real for : r .. 1 end for"

---
"r"@(FileId(1), 4..5) [Declared]: ref_mut real
"<root>"@(dummy) [Declared]: <error>

error in file FileId(1) at 19..25: mismatched types
| note in file FileId(1) for 24..25: this is of type `{integer}`
| note in file FileId(1) for 19..20: this is of type `real`
| error in file FileId(1) for 19..25: expected index types
| info: range bounds types must both be index types (an integer, `boolean`, `char`, enumerated type, or a range)
