compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_for_wrong_value_bounds.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 42
expression: "type k : string\nfor : k .. k end for\nfor : 1 .. k end for\nfor : k .. 1 end for\n"

---
"k"@(FileId(1), 5..6) [Resolved(Type)]: alias[DefId(LibraryId(0), LocalDefId(0))] of string
"<root>"@(dummy) [Declared]: <error>

error in file FileId(1) at 22..23: cannot use `k` as an expression
| error in file FileId(1) for 22..23: `k` is a reference to a type, not a variable
| note in file FileId(1) for 5..6: `k` declared here
error in file FileId(1) at 27..28: cannot use `k` as an expression
| error in file FileId(1) for 27..28: `k` is a reference to a type, not a variable
| note in file FileId(1) for 5..6: `k` declared here
error in file FileId(1) at 48..49: cannot use `k` as an expression
| error in file FileId(1) for 48..49: `k` is a reference to a type, not a variable
| note in file FileId(1) for 5..6: `k` declared here
error in file FileId(1) at 64..65: cannot use `k` as an expression
| error in file FileId(1) for 64..65: `k` is a reference to a type, not a variable
| note in file FileId(1) for 5..6: `k` declared here
